# FieldEvidence

./: .gitignore  Makefile  README.md  README_FIX.md  anchors_clip_00.csv  config.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  test.js
.github/workflows/: demo-guard.yml
config/: codex.sqlite3  secret_key
dev/: C2_PLAN.md  C2_SPEC.md  OBJECTIVES.md  RECOMM_SCHEMA.json  adapt_smoke.sh
dev/context/: ARCHITECTURE.md  RUNBOOK.md  _context_commit.txt  _context_filelist.txt
dev/golden/: vendor_csv.events.jsonl  vendor_nested.events.jsonl  vendor_simple.events.jsonl
dev/patches/: t3_add_event_cli.patch
dev/samples/: vendor_csv.csv  vendor_nested.jsonl  vendor_simple.jsonl
eval/: REPORT.md  __init__.py  harness.py
scripts/: activate.sh  build_proto.sh  emit_cot_from_pings.py  failure_drills.sh  replay_pipeline.py  smoke_c2.sh  synthesize_demo.sh
src/c2/: __init__.py  estimator.py  metrics.py  mock_c2.py  prioritizer.py  recommendation.py  scheduler.py  state.py
src/detect/: __init__.py  detect_launch.py  labels.py
src/infra/: cot_encode.py  net_sim.py  paths.py  replay_in_app.py  snips.py  store_forward.py
src/model/: interface.py  rule_based.py  yolo_adapter.py
src/synth/: __init__.py  synthesize.py
src/ui/: app.py
src/utils/: metrics.py
src/wire/: codec.py  (+5 more)
tests/: test_detect_labels.py  test_estimator.py  test_mock_c2.py  test_prioritizer.py  test_recommendation_schema.py  test_scheduler.py  test_store_forward.py  test_wire.py
tools/: adapter.py  check_pipeline.py  drills.py  freeze_guard.py  verify_comments_only.py
